fix(cooperation): fix overflow and font-size

--- a/src/pages/main/cooperation/Cooperation.module.scss
+++ b/src/pages/main/cooperation/Cooperation.module.scss
@@ -6,6 +6,7 @@
     @extend%aligncenter;
     flex-direction: column;
     margin-top: 7px;
+    overflow: hidden;
     @include tablet {
       width: 100%;
     }
@@ -18,6 +19,10 @@
       margin-bottom: 24px;
       color: $black;
       margin-bottom: 20px;
+      font-size: 32px;
+      @media screen and (max-width: 1024px) {
+        font-size: 24px;
+      }
     }
     p {
       line-height: 1.44;
